fix the size and spacing of the folder containers.

--- a/frontend/src/Library.css
+++ b/frontend/src/Library.css
@@ -128,8 +128,8 @@ div.folder-template {
     border: 9px solid #004346;
     border-radius: 30px;
     color: #d8dcff;
-    margin: 30px auto;
-    padding: 30px;
+    margin: 15px auto;
+    padding: 3px;
     width: 80%;
 }
 
@@ -138,8 +138,8 @@ div.folder-container {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 30px auto;
-    padding: 30px;
+    margin: 15px auto;
+    padding: 3px;
     width: 80%;
 }
 
